--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "ilearnxautomation",
   "version": "1.0.0",
-  "description": "",
+  "description": "Automation framework for iLearnX using Playwright and Allure",
   "main": "index.js",
-  "scripts": {},
-  "keywords": [],
+  "scripts": {
+    "test": "npx playwright test",
+    "test:headed": "npx playwright test --headed",
+    "test:report": "npx rimraf allure-results && npx playwright test && npx allure generate allure-results --clean -o allure-report && npx allure open allure-report",
+    "allure:clear": "npx rimraf allure-results allure-report",
+    "allure:generate": "npx allure generate allure-results --clean -o allure-report",
+    "allure:open": "npx allure open allure-report"
+  },
+  "keywords": ["playwright", "automation", "testing", "allure"],
   "author": "Showrav Karmakar",
   "license": "ISC",
   "type": "commonjs",
@@ -12,6 +19,7 @@
     "@playwright/test": "^1.55.0",
     "@types/node": "^24.3.1",
     "allure-commandline": "^2.34.1",
-    "allure-playwright": "^3.3.3"
+    "allure-playwright": "^3.3.3",
+    "rimraf": "^5.0.10"
   }
 }
