--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -29,10 +29,33 @@ jobs:
       - name: Generate Allure Report
         run: npx allure generate allure-results --clean -o allure-report
 
-      - name: Upload Allure Report
+      # ✅ Upload Allure report as artifact (downloadable from Actions)
+      - name: Upload Allure Report Artifact
         uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
           name: allure-report
           path: allure-report/
           retention-days: 30
+
+      # ✅ Deploy Allure report to GitHub Pages (static site)
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: allure-report/
+
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # required for OIDC authentication
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
